[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sounds/Button.wav" type="AudioStream" id=1]
[ext_resource path="res://UI/05_Menu_Theme.tres" type="Theme" id=2]
[ext_resource path="res://UI/Main_Menu.gd" type="Script" id=4]

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
margin_bottom = 318.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Background_Image2" type="Sprite" parent="."]
position = Vector2( 970, 940 )
offset = Vector2( -462, -430 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 318.0
custom_constants/line_spacing = 5
text = "FPS MAZE"
align = 1
valign = 1

[node name="Play_Again" type="Button" parent="."]
margin_left = 412.0
margin_top = 300.0
margin_right = 612.0
margin_bottom = 336.0
text = "Play!"

[node name="Exit" type="Button" parent="."]
margin_left = 412.0
margin_top = 356.0
margin_right = 612.0
margin_bottom = 392.0
text = "Exit"

[node name="Menu_Button" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = -10.0

[connection signal="pressed" from="Play_Again" to="." method="_on_Play_Again_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
